# myapps-client-utility

./: CMakeLists.txt  README.md  app_list_file.hpp  arrvec.hpp  auth_file.hpp  file_monitor.hpp  locale.hpp  version.hpp  version_impl.hpp.in
certs/: ola-ca-cert.pem  ola-client-front-cert.pem  ola-client-front-key.pem
src/: auth_file.cpp  file_monitor_win.cpp  utility_file.cpp  version.cpp.in
test/: CMakeLists.txt  test_file_guid.cpp  test_file_monitor_basic.cpp
